# ballistics

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ballistics/atmosphere/: Atmosphere.cpp  Atmosphere.hpp  AtmosphereModel.cpp  AtmosphereModel.hpp  Utility.hpp
src/ballistics/constants/: AtmosphereConstants.hpp  FundamentalConstants.hpp  TimeConstants.hpp
src/ballistics/ellipsoid/: Ellipsoid.cpp  Ellipsoid.hpp
src/ballistics/ephemeris/: Ephemeris.hpp
src/ballistics/exception/: ProjectException.cpp  ProjectException.hpp
src/ballistics/forces/: DragForce.hpp  GravityForce.hpp  SolarPressureForse.hpp  ThirdBodyGravity.hpp
src/ballistics/frame_converter/: FrameConverter.hpp
src/ballistics/integrators/RightPart/: RightPartOfDiffEq.hpp
src/ballistics/integrators/explicitRungeKutta/: ButcherTableERK4.hpp  ExplicitRungeKutta.hpp
src/ballistics/integrators/implicitRungeKutta/: ButcherTableIRK5.hpp  ButcherTableIRK6.hpp  implicitRungeKutta.hpp
src/ballistics/optimization/: DifferentialCorrection.hpp
src/ballistics/orbit/: Orbits.hpp
src/ballistics/shadow/: Shadow.hpp
src/ballistics/time/: Error.hpp  Time.hpp  TimeConverter.hpp  time_result.hpp
src/ballistics/types/: BasicTypes.hpp
tests/: CMakeLists.txt  test_Shadow.cpp  test_ThirdBodyGravity.cpp  test_atmosphere.cpp  test_differentialCorrection.cpp  test_ephemeris.cpp  test_explicitRungeKutta.cpp  test_frame_convertations.cpp  test_geographic_lib.cpp  test_orbits.cpp  test_time_convertations.cpp
tests/data_files/: control.nb  integratorRk4.csv  integratorRk4AllForces.csv  integratorRk4RealPotential.csv
tests/log_files/: clear_log.sh  logger.hpp
tests/utility/: CMakeLists.txt  EarthRotationResult.hpp  TimeResult.hpp  gost_density.csv  gost_density_extended.csv
